# pigment

./: .gitignore  Cargo.toml  Info.plist
scripts/: bundle  install
src/: clipboard.rs  draggable.rs  main.rs  markers.rs  menu.rs  picker.rs  utils.rs  value.rs
