[package]
name = "pigment"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy-ui-gradients = "0.4.0"
block2 = "0.6.1"
objc2 = "0.6.2"
objc2-app-kit = { version = "0.3.1", features = [
  "NSColor",
  "NSColorSampler",
  "NSPasteboard",
] }
objc2-foundation = { version = "0.3.1", features = ["NSString"] }

[profile.dev.package."*"]
opt-level = 3
