[package]
name = "pigment"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
block2 = "0.6.1"
objc2 = "0.6.2"
objc2-app-kit = { version = "0.3.1", features = [
  "NSApplication",
  "NSColor",
  "NSColorSampler",
  "NSMenu",
  "NSMenuItem",
  "NSPasteboard",
] }
objc2-foundation = { version = "0.3.1", features = ["NSString"] }

[profile.dev.package."*"]
opt-level = 3
